# Sagrada

./: .clang-format  .gitignore  CMakeLists.txt  README.md  meson.build
include/: meson.build
include/AIPlayers/: AI_Player.h  AI_PlayerConfig.h  AI_PlayerContext.h  AI_PlayerNames.h  DefinedAIPlayers.h  FirstPlayer.h  FirstPlayerConfig.h  HeuristicConstants.h  HeuristicFilter.h  MCTSNode.h  MCTSPlayer.h  MCTSPlayerConfig.h  MCTSPlayerContext.h  MCTSPlayerDefaultConfig.h  MinimaxPlayer.h  MinimaxPlayerConfig.h  MinimaxPlayerType.h  MoveHeuristicCMP.h  RandomPlayer.h  RandomPlayerConfig.h  RulesBasedPlayer.h  RulesBasedPlayerConfig.h
include/Config/: CommonSagradaConfig.h
include/Controller/: ControllerWithAIPlayer.h  LocalPlayerController.h  OnlyAIPlayerController.h  SagradaCMDLineParser.h  SagradaGameCMDLineParser.h  meson.build
include/Controller/InputHandlers/: BoardReader.h  BoardTextFileReader.h  GameConfigReader.h
include/GameUtils/: DefaultGameCreator.h  GameCache.h  GameCacheInitializer.h  GameContextBuilder.h
include/Model/: Attributes.h  BasicMoveHandler.h  CardGameContext.h  Constants.h  Deallocator.h  Debugger.h  DiceConfig.h  DiceSupply.h  Die.h  EvalState.h  IEasyClonable.h  PlayerInformation.h  PrivateObjectiveCard.h  RandomGenerator.h  RoundTrack.h  ScoreContext.h  ScoreLog.h  StringAttributes.h  Typedefs.h  meson.build
include/Model/Board/: Board.h  BoardConfig.h  BoardContext.h  BoardField.h  BoardFieldFastPlaceableDice.h  BoardFieldGeneralPlaceableDice.h  BoardFieldNeighborCache.h  BoardFieldPlaceableDice.h  BoardFieldRestrictions.h  BoardIndex.h  OverallBoardState.h
include/Model/Game/: DefaultGameConstants.h  Game.h  GameCache.h  GameConfig.h  GameContext.h  GameHistory.h  GameInfo.h  GameState.h  PlayerCountRelatedGameInformation.h
include/Model/Moves/: DieToFieldMove.h  DieToFieldMoveMode.h  Move.h  PassMove.h  PlacingDieMove.h  RelocateDieMove.h  RelocateTwoDiceMove.h  ToolCardMove.h
include/Model/PublicObjectiveCards/: PublicObjectiveCard.h  PublicObjectiveCardContext.h  PublicObjectiveCardEvaluatingPatternState.h  PublicObjectiveCardGameContext.h  PublicObjectiveCardPatternState.h  PublicObjectiveCardRowAndColumnEvaluatingInformation.h  PublicObjectiveCardType.h
include/Model/ToolCards/: ChangeDieValueTC.h  MoveTwiceInARowTC.h  PutDieWithoutNeighborTC.h  RelocateDieIgnoreAttributeTC.h  RelocateDieMoveReferenceFiller.h  RelocateExactlyTwoDiceTC.h  RelocateMaxTwoSameColorDiceTC.h  RelocatingTC.h  ReplaceDieFromSupplyToRoundTrackTC.h  ReplaceDieWithRandomFromBagTC.h  RerollAllDiceTC.h  RerollDieTC.h  ReverseDieValueTC.h  ToolCard.h  ToolCardGameContext.h  ToolCardType.h  ToolCardUseFeedback.h
include/SagradaJson/: AttributesJson.h  BoardConfigJson.h  DiceConfigJson.h  DieJson.h  GameContextJson.h  GameStateJson.h  MoveJson.h  PlayerCountRelatedJson.h  PuocContextJson.h  RoundInfoJson.h  SagradaJson.h  ScoreContextJson.h  TcContextJson.h  WpcJson.h
include/Signallers/: IBoardViewSignallable.h  IDieClickSignallable.h  IDieClickSignaller.h  INewRoundStartSignallable.h  IRoundTrackClickSignallable.h  ISignaller.h  IToolCardViewSignalProcessor.h
include/Tournament/: DefaultPointMapper.h  ITournamentPrinter.h  PlayerStatistics.h  Tournament.h  TournamentCSVPrinter.h  TournamentConfig.h  TournamentGameInformation.h  TournamentStatistics.h  TournamentStreamPrinter.h  WilsonScoreInterval.h
include/Utils/: meson.build
include/Utils/Logger/: Date.h  LogConfig.h  LogLevels.h  Logger.h
include/View/: BoardFieldView.h  CardIcon.h  CurrentRoundsDiceView.h  Digits.h  GameMode.h  GameTypes.h  LabeledWidget.h  NumberEntry.h  PlayerOrderDisplayer.h  Point.h  RectangularBoardView.h  RectangularBoardViewConstants.h  RoundNumberView.h  RoundTrackView.h  SagradaWindow.h  ScoreBoard.h  SizeInPixels.h  ViewConstants.h  ViewContext.h  meson.build
include/View/Images/: Image.h  ImageConstants.h  PublicObjectiveCardImages.h  ToolCardImages.h
include/View/Pages/: AI_TypeSpecifierView.h  CommonGameConfigElements.h  CommonGameViewElements.h  GameConfigurationWidgets.h  MCTSAI_TypeSpecifierView.h  MinimaxAI_TypeSpecifierView.h  Page.h  PageType.h  RulesBasedAI_TypeSpecifierView.h  SimpleAI_TypeSpecifierView.h  meson.build
include/View/PrivateObjectiveCards/: PrivateObjectiveCardPathsByType.h  PrivateObjectiveCardViewConstants.h
include/View/PublicObjectiveCards/: PublicObjectiveCardPathsByType.h  PublicObjectiveCardViewConstants.h
include/View/ToolCards/: ChangeDieValueTCView.hpp  MoveTwiceInARowTCView.hpp  PutDieWithoutNeighborTCView.hpp  RelocateDieIgnoreAttributeTCView.hpp  RelocateExactlyTwoDiceTCView.hpp  RelocateMaxTwoSameColorDiceTCView.hpp  RelocatingToolCardView.hpp  ReplaceDieFromSupplyToRoundTrackTCView.hpp  (+8 more)
src/AIPlayers/: AI_Player.cpp  DefinedAIPlayers.cpp  FirstPlayer.cpp  MCTSNode.cpp  MCTSPlayer.cpp  MCTSPlayerConfig.cpp  MinimaxPlayer.cpp  MinimaxPlayerConfig.cpp  RandomPlayer.cpp  RulesBasedPlayer.cpp  RulesBasedPlayerConfig.cpp  meson.build
src/Controller/: LocalPlayerController.cpp  OnlyAIPlayerController.cpp  SagradaGameCMDLineParser.cpp  meson.build
src/GameUtils/: GameCache.cpp  GameCacheInitializer.cpp  GameContextBuilder.cpp  meson.build
src/Model/: Attributes.cpp  BasicMoveHandler.cpp  DiceSupply.cpp  EvalState.cpp  RoundTrack.cpp  meson.build
src/Tournament/: DefaultPointMapper.cpp  PlayerStatistics.cpp  Tournament.cpp  main.cpp  meson.build
src/View/: BoardFieldView.cpp  Digits.cpp  Image.cpp  PlayerOrderDisplayer.cpp  RectangularBoardView.cpp  RoundNumberView.cpp  RoundTrackView.cpp  SagradaWindow.cpp  ScoreBoard.cpp  ViewContext.cpp  main.cpp  meson.build  wpc_png_saver_main.cpp
tests/: MoveTests.h  SagradaTest.h  UndoTest.h  main.cpp  meson.build
tests/GameCloneTests/: BoardFieldEqualTest.h  BoardsEqualTest.h  CloneTests.h  DieEqualTest.h  GameContextEqualTest.h  GameStateEqualTest.h  PlayersEqualTest.h  RoundInfoEqualTest.h  RoundTrackEqualTest.h  ScoreContextEqualTest.h  SupplyEqualTest.h
tests/ToolCardTests/: ChangeDieValueTCTest.h  DieValueTestConfig.h  ReverseDieValueTCTest.h  ToolCardTest.h
(+171 files in other folders)
