
subdir('Utils')
subdir('Model')
subdir('Controller')
subdir('View')

tournament_inc = include_directories('Tournament')
ai_inc = include_directories('AIPlayers')
game_utils_inc = include_directories('GameUtils')
sagrada_json_inc = include_directories('SagradaJson')
signallers_inc = include_directories('Signallers')