ai_src = files(
    'MCTSPlayer.cpp', 
    'MCTSNode.cpp', 
    'MCTSPlayerConfig.cpp',
    'RulesBasedPlayer.cpp', 
    'RulesBasedPlayerConfig.cpp',
    'FirstPlayer.cpp', 
    'RandomPlayer.cpp', 
    'AI_Player.cpp', 
    'DefinedAIPlayers.cpp',
    'MinimaxPlayer.cpp', 
    'MinimaxPlayerConfig.cpp'
)