subdir('Pages')
subdir('Images')
subdir('ToolCards')

view_src = [
    page_src, 
    tc_view_src, 
    image_src, 
    files(
        'Image.cpp',
        'RoundTrackView.cpp',
        'ViewContext.cpp',
        'SagradaWindow.cpp',
        'BoardFieldView.cpp',
        'Digits.cpp',
        'RoundNumberView.cpp',
        'ScoreBoard.cpp',
        'PlayerOrderDisplayer.cpp',
        'RectangularBoardView.cpp',
    )
]