tc_src = files(
    'RelocatingTC.cpp',
    'ChangeDieValueTC.cpp', 
    'MoveTwiceInARowTC.cpp', 
    'PutDieWithoutNeighborTC.cpp', 
    'RelocateExactlyTwoDiceTC.cpp', 
    'RelocateMaxTwoSameColorDiceTC.cpp', 
    'ReplaceDieFromSupplyToRoundTrackTC.cpp', 
    'ReplaceDieWithRandomFromBagTC.cpp', 
    'RerollAllDiceTC.cpp', 
    'RerollDieTC.cpp', 
    'ReverseDieValueTC.cpp', 
    'ToolCard.cpp'
)