
page_src = files(
    'CommonGameConfigElements.cpp',
    'GameConfigurationWidgets.cpp',
    
    'GamePlayingPage/GamePlayingPageContext.cpp',
    
    'CustomConfigPage/CustomConfigPage.cpp',
    'CustomConfigPage/AllSubpages.cpp',
    'CustomConfigPage/BoardConfigSubpage.cpp',
    
    'TournamentPage/TournamentStatisticsPage.cpp',
    'TournamentPage/TournamentGameResult.cpp',
    'TournamentPage/TournamentResultPage.cpp',
    'TournamentPage/TournamentPage.cpp',
    'TournamentPage/TournamentConfigPage.cpp',
    
    'GamePlayingPage/SimulationGamePlayingPage.cpp',
    'GamePlayingPage/LocalGamePlayingPage.cpp',
    'GamePlayingPage/LocalGamePlayingPageContext.cpp',
    'GamePlayingPage/GamePlayingPage.cpp',
    
    'HomePage/LocalPlayerGameTypeChoosingSubpage.cpp',
    'HomePage/HomePage.cpp',
    'HomePage/LocalPlayerGameConfigurationSubpage.cpp',
    
    'WPCChoosingPage/WPCChoosingPage.cpp',
    'WPCChoosingPage/WPCChoosingPage.cpp',
    
    'SimulationPage/SimulationConfigPage.cpp',
    'SimulationPage/SimulationConfigPageBase.cpp'
)